# labs-tools-suggestor

./: .gitignore  .gitreview  COPYING  Cargo.toml  README.md  Rocket.toml.example  TODO.md  bookmarklet.js  config.example.toml  main.go
migrations/2020-07-15-111314_create/: down.sql  up.sql
public/: callback.html  diff.html  layout.html  pending.html  root.html  style.css
src/: api.rs  backend.rs  main.rs  models.rs  schema.rs  web.rs
templates/: bookmarklet.js  diff.html  diff.html.tera  layout.html  layout.html.tera  pending.html  pending.html.tera  root.html  root.html.tera  status.html.tera  ve.js
webext/: .eslintrc  index.js  manifest.json  package.json
