[package]
name = "suggestor"
version = "0.2.0"
authors = ["Arlo Breault <arlolra@gmail.com>", "Kunal Mehta <legoktm@member.fsf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use git snapshot so we can use stable Rust
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "c24f15c18f02319", features = ["secrets"] }
rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket", rev = "c24f15c18f02319", default-features = false, features = ["json","serve", "tera_templates", "diesel_mysql_pool"]}
diesel = "1.4.5"
diesel_migrations = "1.4.0"
# Patches to support Rocket's git snapshot
rocket_oauth2 = { git = "https://github.com/legoktm/rocket_oauth2", branch = "lego-next" }
# Causing SIGILL on `cargo test`
# rocket_healthz = "0.2"
mediawiki = "0.2.6"
serde = {version = "1.0", features = ["derive"]}
anyhow = "1.0.31"
toolforge = "0.2"
